--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --main-bg-color: brown; 
     --main-font-size: 16px; 
-    --main-font-family:  Verdana, Arial, Helvetica, sans-serif; 
+    --main-font-family:  Roboto,Arial,sans-serif; 
     --main-font-weight: 400; 
 
     --color-70: #323c45;
@@ -55,36 +55,8 @@
     }
 
 
-
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: var(--color-60);
-      }
-      
-      li {
-        float: left;
-        height: 90%;
-      }
-      
-      li a {
-        display: block;        
-        text-align: center;
-        color: var(--color-20);
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      
-      li a:hover {
-        background-color: var(--color-40);             
-      }
-
-      li.right {
-        float: right;
-      }
-      
-      .active {
-        background-color: #04AA6D;
-      }
+.main-content {
+  margin-top: 50px;
+  border: solid red 1px;
+}
+   
