--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-:root {
-    --main-bg-color: brown; 
+:root {    
     --main-font-size: 16px; 
     --main-font-family:  Roboto,Arial,sans-serif; 
     --main-font-weight: 400; 
@@ -13,6 +12,10 @@
     --color-10: #f5f8fa;
     }
 
+    .rg-border {
+        border: solid red 1px;
+    }
+
     html {
         font-size: var(--main-font-size);
         letter-spacing: 0.1em;
@@ -21,14 +24,21 @@
     }
 
     body {
-        padding-left: 5px;
-        padding-right: 5px;
-        background-color: var(--color-20);
+        margin: 0;
+        background-color: var(--color-20);        
     }
 
     .bold {
         font-weight: 600;
     }
+
+    .to-do {
+        margin-top: 2em;
+    } 
+
+    .to-do::before {
+        content: "TODO: ";
+     }
 
     h6 {
         font-size: 1.2em; 
@@ -56,7 +66,8 @@
 
 
 .main-content {
-  margin-top: 50px;
-  border: solid red 1px;
+  padding-left: 20px;
+  padding-right: 10px;
+  margin-top: 50px;  
 }
    
