--- a/css/table.css
+++ b/css/table.css
@@ -7,8 +7,18 @@
     width: 40%;
 }
 
+.col-8 {
+  flex: 0 0 auto;
+  width: 80%;
+}
+
+.col-6 {
+  flex: 0 0 auto;
+  width: 60%;
+}
+
 table {  
-  border-collapse: collapse;  
+  border-collapse: collapse;    
   cursor: pointer;
 }
 
@@ -29,3 +39,23 @@ tr:hover {
 tr:first-child:hover  {
   background-color: var(--color-20); 
 } 
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+}
+
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
+}
