--- a/css/input.css
+++ b/css/input.css
@@ -1,8 +1,6 @@
 input[type=text] {    
-    width: 100%;
-    border:0;
-    box-shadow: 0 0 5px var(--color-40);
-    border-radius:5px;
+    width: 100%;      
+    
     font-size: inherit;
     font-family: inherit;
     font-weight: inherit;
@@ -10,16 +8,35 @@ input[type=text] {
     padding: 5px;
 }
 
+.inpt-shadowed {
+    border:0; 
+    border-radius:5px;
+    box-shadow: 0 0 5px var(--color-40);
+}
 
-input[type=text]:hover {    
+.inpt-shadowed:hover {    
     box-shadow: 0 0 5px 2px var(--color-40);
 }
 
-input[type=text]:focus {    
+.inpt-shadowed:focus {    
     outline: none;
     box-shadow: 0 0 5px 2px var(--color-50);
 }
 
+.inpt-underlined {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid var(--color-40);
+}
+
+.inpt-underlined:hover {    
+    border-bottom: 2px solid var(--color-40);
+}
+
+.inpt-underlined:focus {  
+    outline: none;  
+    border-bottom: 2px solid var(--color-50);
+}
 
 
 .float-up {
