--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ h1 {
 .control-section .control-row {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .control-section .control-section-title {
